# gfxhelper

./: CMakeLists.txt  LICENSE  README.md  build.sh  pkg-config.in
examples/: main_cymn.c  main_sapin.c  main_soleil.c
src/: GfxHelper.h  affine.c  cairomatrixlist.c  core_api.c  foreground.h  foreground.m  gtk_integration.c  image.c  pixels.c  public_header.h  text.c  user_handlers.c
src/private_headers/: cairomatrixlist.h  lib_common.h
